test/TestPhases/typechecker/valid/increment.blc
module


activity empty ()()
    var x: int32 = 15
    x = x + 1
    await false;
end
