test/TestPhases/typechecker/invalid/booleanCallX5.blc
module


activity other (i: int32)()
    await i
end

activity empty ()()
    var x: bool = false

    x = x or true
    run other(x)
    
end
